source/sass/blocks/section-instock.scss
.instock {
  background-color: $palette-brightcontrast;
  color: $palette-darkcontrast;
  padding: 39px 0 150px;
  text-align: center;

  @media (min-width: $small-desktop-width) {
    padding: 91px 0;
    text-align: start;
  }

  @media (min-width: $desktop-width) {
    padding: 150px 0;
    text-align: start;
  }

  .index-main & {
    padding-bottom: 0;
  }
}

.instock__title {
  margin: 0 0 28px;
  padding: 0;

  @include font-title-middle;

  @media (min-width: $small-desktop-width) {
    margin: 0 0 24px;
  }

  @media (min-width: $desktop-width) {
    margin: 0 0 44px;
  }
}

.instock__list {
  @include list;

  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 10%;

  @media (min-width: $small-desktop-width) {
    justify-content: space-between;
    gap: unset;
  }
}

.instock__item {
  width: 100%;
  margin: 0 0 30px;

  @media (min-width: $small-desktop-width) {
    width: unset;
  }
}

.instock__item-box {
  margin: 0;
  padding: 0;
  position: relative;
}

.instock__item-link {
  position: absolute;
  inset: 0;
  z-index: 1;
  text-decoration:  none;
}

.instock__image-container {
  width: 100%;
}

.instock__item-image {
  width: 100%;
  height: 185px;
  margin: 0 0 5px;
  line-height: 0;
  object-fit: cover;

  @media (min-width: $tablet-width) {
    height: 320px;
  }

  @media (min-width: $small-desktop-width) {
    width: 347px;
    height: 235px;
    margin: 5px 0;
  }

  @media (min-width: $desktop-width) {
    width: 500px;
    height: 343px;
    margin: 5px 0 20px;
  }
}

.instock__item:nth-child(1) .instock__item-image {
  background: linear-gradient(20deg, #A4B571, #A3ABB4);
}

.instock__item:nth-child(2) .instock__item-image {
  background: linear-gradient(20deg, #594C4C, #F5DDB1);
}

.instock__item:nth-child(3) .instock__item-image {
  background: linear-gradient(20deg, #6E8260, #ADB1BA);
}

.instock__item-name {
  position: absolute;
  top: 5%;
  left: 2%;
  padding: 7px 20px 8px 15px;
  background-color: $palette-accent;
  border-radius: 16px 0;
  margin: 0;
  transition-property: transform, top, left;
  transition-duration: 1.2s;

  @include font-title-middle;

  @media (min-width: $small-desktop-width) {
    top: 3.5%;
    padding: 4px 14px 9px 15px;
    border-radius: 20px 0;
    font-size: 35px;
  }

  @media (min-width: $desktop-width) {
    padding: 11px 21px 11px 20px;
    border-radius: 30px 0;
    font-size: 50px;
  }
}

.instock__item-link:hover ~ .instock__item-captions .instock__item-name,
.instock__item-link:focus ~ .instock__item-captions .instock__item-name {
  top: 0;
  left: 0;
  transform: scale(0.75);

  @media (min-width: $small-desktop-width) {
    top: -5%;
    left: -7.5%;
  }
}

.instock__item-name span:first-of-type {
  letter-spacing: 0.06em;
}

.instock__item-name span:nth-child(2) {
  letter-spacing: -0.06em;
}

.instock__item-under {
  display: flex;
  flex-flow: row nowrap;
}

.instock__item-underline {
  flex-grow: 1;
  position: relative;
  padding: 0;
  margin: 0 auto 0 0;
  background-color: transparent;
}

.instock__item-underline::before {
  content: "";
  position: absolute;
  height: 1px;
  left: 0;
  right: 0;
  top: 49%;
  background-color: $palette-darkcontrast;
}

.instock__item-price {
  margin: 0 1.5% 0 0;
  padding: 0 0 0 7px;
  transition: margin 1.1s;

  @include font-primary($size: 16px, $line-height: 20px, $weight: 800);

  @media (min-width: $small-desktop-width) {
    padding: 1px 3px 1px 5px;
    font-size: 18px;
    line-height: normal;
  }

  @media (min-width: $desktop-width) {
    padding: 6px 8px 5px 10px;
    font-size: 24px;
  }
}

.instock__item-link:hover ~ .instock__item-captions .instock__item-price,
.instock__item-link:focus ~ .instock__item-captions .instock__item-price {
  margin-right: 0;

  @media (min-width: $small-desktop-width) {
    margin-right: -10px;
  }
}

